# AppflowyCLI

./: .env.example  .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  api-docs.md  appflowy  install.sh  pyproject.toml
skills/appflowy-cli/: SKILL.md
skills/appflowy-cli/agents/: openai.yaml
src/appflowy_cli/: __init__.py  cli.py  client.py  yjs_decoder.py
tests/: test_appflowy.py  test_cli.py  test_yjs_decoder.py
